--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 layout: default
-title: Blog
+title: Marco Poetry Chen | Blog
 permalink: /blog/
 published: true
 ---
-
 <div class="home">
 
 
