--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Marco Poetry Chen | Blog
 permalink: /blog/
 published: true
 ---
-<div class="home">
+<div class="blog">
 
 
   {% for post in paginator.posts%}
